# fortiedr-soc-analyst

./: .env.example  .gitignore  README.md  pyproject.toml
benchmark/: README.md  __init__.py  run_benchmark.py
benchmark/results/incident_5468293_lite_ollama_models_20260413T190315Z/: normalized_input.json  results.json  skill_snapshot.json  summary.csv
data/: analysis_runs.sqlite3
scripts/: export_schemas.py
src/fortiedr_mcp/: __init__.py  __main__.py  analyze_incident.py  config.py  errors.py  fetch_incident.py  fortiedr_client.py  server.py
src/fortiedr_mcp/analysis/: __init__.py  context.py  models.py  policies.py  profiles.py  repair.py  validation.py
src/fortiedr_mcp/api/: __init__.py  app.py
src/fortiedr_mcp/data/: fortiedr_security_policies.json
src/fortiedr_mcp/llm/: __init__.py  anthropic.py  base.py  factory.py  mock.py  ollama.py  openai.py
src/fortiedr_mcp/models/: __init__.py  analysis_runs.py  incidents.py  llm.py
src/fortiedr_mcp/portal/: incident.html  incident.js  incidents.js  index.html  run.html  run.js  shared.js  styles.css
src/fortiedr_mcp/repositories/: __init__.py  analysis_runs.py
src/fortiedr_mcp/schemas/: incident_senior_soc_v1_input.schema.json  incident_senior_soc_v1_output.schema.json
tests/: conftest.py  test_analysis_run_service.py  test_analysis_schema.py  test_api_app.py  test_benchmark_helpers.py  test_incident_analysis_service.py  test_incident_data_service.py  test_llm_factory.py  test_llm_ollama.py  test_schema_files.py  test_skill_registry.py
tests/fixtures/: sample_incident_details.json
(+11 files in other folders)
